# Cyber-Universe-Capstone-v2

./: .gitignore  README.md  overview.md
ghost-cyber-universe-core/aetherium-rust/: .gitignore  aetherium_combined.py  requirements.txt
ghost-cyber-universe-core/aetherium-rust/pqc/: embedding_security.py
ghost-cyber-universe-core/core-c/: .gitignore  CMakeLists.txt  PolymorphicPass.cpp  build.sh
ghost-cyber-universe-core/core-c/go/: main.go
ghost-cyber-universe-core/core-c/include/: crypto.h  ghost_core.h  payload.h  syscalls.h
ghost-cyber-universe-core/core-c/rust/: lib.rs
ghost-cyber-universe-core/core-c/src/: appsec_audit.c  crypto.c  ebpf_sensor.c  kernel_extension.c  malware_analysis.c  payload.h  payload_engine.c  payload_impl.c  red_team_tester.c  syscalls.c  threat_modeling.c
ghost-cyber-universe-core/core-c/tests/: CMakeLists.txt  test_payload.c
ghost-cyber-universe-core/services-rust/: .gitignore  Cargo.toml  lib.rs
ghost-cyber-universe-core/services-rust/ebpf/: mod.rs
ghost-cyber-universe-core/services-rust/src/: events.rs  lib.rs  main.rs  models.rs  sensors.rs  sigma_engine.rs
ghost-cyber-universe-core/services-rust/src/tests/: sigma_engine.rs
ghost-cyber-universe-devops/infrastructure/ansible/playbooks/: setup-ghost-infrastructure.yml
ghost-cyber-universe-devops/infrastructure/docker/: Dockerfile  docker-compose.yml
ghost-cyber-universe-devops/infrastructure/kubernetes/base/: deployment.yaml  mongodb-deployment.yaml  namespace.yaml  rbac.yaml  shinra-deployment.yaml
ghost-cyber-universe-devops/infrastructure/kubernetes/overlays/: kustomization.yaml
ghost-cyber-universe-devops/infrastructure/kubernetes/policy/: constraint-templates.yaml  constraints.yaml
ghost-cyber-universe-devops/infrastructure/terraform/aws/: c2-ha.tf  main.tf
ghost-cyber-universe-devops/monitoring/: c2-alerts.yml  c2-ha.yml
ghost-cyber-universe-devops/monitoring/alertmanager/: alertmanager-config.yaml
ghost-cyber-universe-devops/monitoring/grafana/dashboards/: defensive-ops-dashboard.json  ghost-cyber-universe-dashboard.json  offensive-ops-dashboard.json
ghost-cyber-universe-devops/monitoring/prometheus/: prometheus-config.yaml  prometheus.yml
ghost-cyber-universe-devops/pipelines/: multi-stage-build.yml
ghost-cyber-universe-devops/pipelines/devsecops/: __init__.py  main.py  pipeline.py  policies.py  scanner.py  secrets.py
ghost-cyber-universe-research/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  conftest.py  docker-compose.yml  pytest.ini  requirements.txt  run.py  test_main.http
ghost-cyber-universe-research/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ghost-cyber-universe-research/.github/workflows/: ci.yaml  pipeline-durcie.yml  security-pipeline.yml
ghost-cyber-universe-research/app/: __init__.py
ghost-cyber-universe-research/app/common/utils/: tasks.py
ghost-cyber-universe-research/app/domain/entities/: models.py  schemas.py
ghost-cyber-universe-research/app/domain/repositories/: database.py
ghost-cyber-universe-research/app/domain/services/: __init__.py  auth_service_backup.py  auth_service_fixed.py  educational_generator.py  educational_service.py  notification_service.py  rag_chain.py  threat_service.py  (+2 more)
ghost-cyber-universe-research/k8s/base/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
ghost-cyber-universe-research/k8s/monitoring/: alerts.yaml  kustomization.yaml  logging.yaml  rbac.yaml  servicemonitor.yaml
ghost-cyber-universe-research/k8s/policy/: kustomization.yaml
ghost-cyber-universe-research/k8s/secure/: deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  rbac.yaml
ghost-cyber-universe-research/scripts/: deploy.sh  init_data.py  metrics.py  seed_educational_content.py
ghost-cyber-universe-research/tests/fixtures/: integration_test_config.json  load_test_config.json  performance_test_config.json  security_test_config.json
ghost-cyber-universe-research/tests/unit/: security_test_suite.py  test_health.py  test_integration.py  test_load.py  test_security.py  test_security_units.py
universe-frontend/frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
universe-frontend/frontend/src/: App.tsx
(+62 files in other folders)
