[package]
name = "services_rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Rust implementation of OSINT services (former Python proofs-of-concept)"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tuikit = "0.1"  # example placeholder
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
serde_test = "1.0"